-------------------------- aqp 0.99-9.3 (2012-01-09) --------------------------
* 'site(SCP) <- d' now tries to merge data from SPC@site with 'd' via left join
  - this means that all new SPC objects will have a single column of @site data, containin profile IDs

-------------------------- aqp 0.99-9.1 (2011-12-27) --------------------------
* pedonPC, NASIS, and SDA functions moved *out* of aqp, and *into* new package: soilDB
  - removed assocated, suggested packages from aqp
  - soilDB will be on CRAN shortly
* new argument to plot(SoilProfileCollection, ..., divide.hz=TRUE|FALSE) tha can optionally suppress 
  plotting of dividing lines between horizons (suggested by Ludwig Hilger)
* new function profileApply() for applying functions by profile

-------------------------- aqp 0.99-9 (2011-12-22) --------------------------
* almost ready for AQP 1.0, vignettes are the last missing piece :)
* slice(SPC, ...) is now 10-100x faster, scales linearly
* slice(SPC, ...) can simultaniously slice categorical and continuous variables
* converted ID column in sample data to character class
* fixed a bug in slice() where NA would be returned when IDs were factors
* added test to depths()<- such that factor IDs are converted into character IDs and a warning is issued
* added join conditions for most functions using plyr::join(), resulting in less chatter on the console 

-------------------------- aqp 0.99-8.58 (2011-12-21) --------------------------
* WARNING: soil.slot.multiple() renamed to slab()
* fixed minor bug in slice(), when numerical IDs are used: ddply() and cast() implicitly re-order data...
* added `strict` argument to many functions, to gracefully account for bad horizon data
  - enforce quality control with strict=TRUE
* munsell2rgb() is now 100x faster thanks to plyr::join()
  - note that factors cannot be used in the conversion, see: https://github.com/hadley/plyr/issues/43